         | C   C  O   O  NN  N  Q   Q  U   U  E      S        T   |
         | C      O   O  N N N  Q   Q  U   U  EEE     SSS     T   |
         | C   C  O   O  N  NN  Q  Q   U   U  E          S    T   |
         |  CCC    OOO   N   N   QQ Q   UUU   EEEEE  SSSS     T   |
         +--------------------------------------------------------+

                              Conquest HISTORY

???

3/11/2006

       - based on 'mag factor' idea from Cat, implemented zoom in/out
         in both SR and LR views.  There are 5 levels of zoom out and
         zoom in.  You can zoom in/out wit the '[' and ']' keys.  ^L
         resets the view to default zoom (none).  

         During this work some subtle bugs in GLcvtcoords() were fixed,
         yielding much more accurate placing of objects.  Other BS
         assumptions of mine also fixed.  

       - cursor now uses cross-hair shape.  With a fixed GLcvtcoords,
         it is actually accurate in the viewer now. :)

       - fixed some security (possble buffer overruns) in the client
         (meta.c and CLIENTSTAT processing) reported by Luigi Auriemma.


8.2a (devel) 11/27/2006

       - Added sound support using SDL and the SDL_mixer API based on
         patches and samples from Cataboligne.  

         This version supports sound effects for phasers, torps,
         explosions, and pile of other things.

         In addition, an optional 'musicpak' tarball provides some
         appropriate Conquest music to listen to during your campaign
         of terror.

         The musicpak is located on the webpage with the source
         tarball and can be installed by unpacking it into your
         ~/.conquest/ directory.

         SDL and SDL_mixer development header files and libs are
         required.  All sound effects and music are supplied in OGG
         Vorbis (.ogg) format.  I believe all linux systems at least,
         support OGG in their SDL implementation.    
