@@ -1,5 +1,5 @@
-/* Generated by conqinit on 22:47:30 25Nov06 */
-/* $Id: conqinit-yacc.y 663 2006-11-19 05:41:33Z jon $ */
+/* Generated by conqinit on 20:28:12 26Mar07 */
+/* $Id: conqinit-yacc.y 688 2006-11-27 22:34:45Z jon $ */
 
 
 #ifndef _SOUNDDATA_H
@@ -35,7 +35,7 @@ static cqiSoundRec_t defaultSoundEffects[51] = {
  { "shipF-beam-up", "TOS-fbeamu", 100, 0, 0, 1000, 1, 1, 0, 0 },
  { "shipF-hit", "TOS-fblast", 100, 0, 0, 1000, 1, 1, 0, 0 },
  { "shipF-info", "TOS-finfo", 70, 0, 0, 0, 1, 1, 0, 5000 },
- { "shipF-mag", "TOS-fmag", 70, 0, 0, 0, 1, 1, 0, 0 },
+ { "shipF-mag", "TOS-fmag", 70, 0, 0, 0, 1, 1, 0, 5000 },
  { "shipF-warp-up", "TOS-fwarpu", 70, 0, 0, 3000, 1, 1, 0, 0 },
  { "shipF-warp-down", "TOS-fwarpd", 50, 0, 0, 3000, 1, 1, 0, 0 },
  { "shipR-phaser", "TOS-fphaz", 60, 0, 0, 0, 1, 2, 0, 0 },
@@ -46,7 +46,7 @@ static cqiSoundRec_t defaultSoundEffects[51] = {
  { "shipR-beam-up", "TOS-fbeamu", 100, 0, 0, 1000, 1, 1, 0, 0 },
  { "shipR-hit", "TOS-fblast", 100, 0, 0, 1000, 1, 1, 0, 0 },
  { "shipR-info", "TOS-finfo", 70, 0, 0, 0, 1, 1, 0, 5000 },
- { "shipR-mag", "TOS-fmag", 70, 0, 0, 0, 1, 1, 0, 0 },
+ { "shipR-mag", "TOS-fmag", 70, 0, 0, 0, 1, 1, 0, 5000 },
  { "shipR-warp-up", "TOS-fwarpu", 70, 0, 0, 3000, 1, 1, 0, 0 },
  { "shipR-warp-down", "TOS-fwarpd", 50, 0, 0, 3000, 1, 1, 0, 0 },
  { "shipK-phaser", "TOS-fphaz", 60, 0, 0, 0, 1, 2, 0, 0 },
@@ -57,7 +57,7 @@ static cqiSoundRec_t defaultSoundEffects[51] = {
  { "shipK-beam-up", "TOS-fbeamu", 100, 0, 0, 1000, 1, 1, 0, 0 },
  { "shipK-hit", "TOS-fblast", 100, 0, 0, 1000, 1, 1, 0, 0 },
  { "shipK-info", "TOS-finfo", 70, 0, 0, 0, 1, 1, 0, 5000 },
- { "shipK-mag", "TOS-fmag", 70, 0, 0, 0, 1, 1, 0, 0 },
+ { "shipK-mag", "TOS-fmag", 70, 0, 0, 0, 1, 1, 0, 5000 },
  { "shipK-warp-up", "TOS-fwarpu", 70, 0, 0, 3000, 1, 1, 0, 0 },
  { "shipK-warp-down", "TOS-fwarpd", 50, 0, 0, 3000, 1, 1, 0, 0 },
  { "shipO-phaser", "TOS-fphaz", 60, 0, 0, 0, 1, 2, 0, 0 },
@@ -68,7 +68,7 @@ static cqiSoundRec_t defaultSoundEffects[51] = {
  { "shipO-beam-up", "TOS-fbeamu", 100, 0, 0, 1000, 1, 1, 0, 0 },
  { "shipO-hit", "TOS-fblast", 100, 0, 0, 1000, 1, 1, 0, 0 },
  { "shipO-info", "TOS-finfo", 70, 0, 0, 0, 1, 1, 0, 5000 },
- { "shipO-mag", "TOS-fmag", 70, 0, 0, 0, 1, 1, 0, 0 },
+ { "shipO-mag", "TOS-fmag", 70, 0, 0, 0, 1, 1, 0, 5000 },
  { "shipO-warp-up", "TOS-fwarpu", 70, 0, 0, 3000, 1, 1, 0, 0 },
  { "shipO-warp-down", "TOS-fwarpd", 50, 0, 0, 3000, 1, 1, 0, 0 },
 };
